--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="heading-container">
             <h1>ID-diff: Diffusion Models Encode the Intrinsic Dimension of Data Manifolds</h1>
             <p>Jan Pawel Stanczuk<sup>1*</sup>, Georgios Batzolis<sup>1*</sup>, Teo Deveney<sup>2</sup>, Carola-Bibiane Schönlieb<sup>1</sup></p>
-            <p class="clarification">*Indicates equal contribution</p>
+            <p class="clarification">*equal contribution</p>
             <p class="conference">International Conference on Machine Learning (ICML), 2024</p>
         </div>
         <div class="links">
