basic structure of the webpage is ready

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="content-block header">
         <div class="heading-container">
             <h1>ID-diff: Diffusion Models Encode the Intrinsic Dimension of Data Manifolds</h1>
-            <p>Jan Pawel Stanczuk<sup>1*</sup>, Georgios Batzolis<sup>1*</sup>, Teo Deveney<sup>2</sup>, Carola-Bibiane Schönlieb<sup>1</sup></p>
-            <p class="affiliations">*Equal contribution. 1: University of Cambridge, 2: University of Bath</p>
+            <p>Jan Pawel Stanczuk<sup>*,1</sup>, Georgios Batzolis<sup>*,1</sup>, Teo Deveney<sup>2</sup>, Carola-Bibiane Schönlieb<sup>1</sup></p>
+            <p class="affiliations"><sup>1</sup>University of Cambridge, <sup>2</sup>University of Bath</p>
             <p class="clarification">*equal contribution</p>
             <p class="conference">International Conference on Machine Learning (ICML), 2024</p>
         </div>
